# esmetrics

./: .editorconfig  .gitignore  CREDITS.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  UPSTREAM  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
apps/esm-agent/: Cargo.toml
apps/esm-agent/src/: main.rs
apps/esm-alert/: Cargo.toml
apps/esm-alert/src/: main.rs
apps/esm-auth/: Cargo.toml
apps/esm-auth/src/: main.rs
apps/esm-backup/: Cargo.toml
apps/esm-backup/src/: main.rs
apps/esm-ctl/: Cargo.toml
apps/esm-ctl/src/: main.rs
apps/esm-single/: Cargo.toml
apps/esm-single/src/: main.rs
apps/esm-single/tests/: profile_ingest.rs  profile_query.rs
conformance/harness/: Cargo.toml
conformance/harness/src/: main.rs
crates/esm-alerting/: Cargo.toml
crates/esm-alerting/src/: lib.rs
crates/esm-auth/: Cargo.toml
crates/esm-auth/src/: auth.rs  balance.rs  config.rs  lib.rs  metrics.rs  proxy.rs  route.rs
crates/esm-auth/src/proxy/: tests.rs
crates/esm-backup/: Cargo.toml
crates/esm-backup/src/: backup.rs  cliflags.rs  lib.rs  localfs.rs  names.rs  part.rs  restore.rs  timeutil.rs
crates/esm-backup/src/remote/: local.rs  mod.rs  object.rs
crates/esm-backup/tests/: backup_restore_test.rs  esbackup_createurl_test.rs
crates/esm-common/: Cargo.toml
crates/esm-common/src/: bytesutil.rs  decimal.rs  fastnum.rs  fasttime.rs  filestream.rs  fs.rs  lib.rs  limiter.rs  logger.rs  memory.rs  metrics.rs  query_workers.rs  regexutil.rs  uint64set.rs
crates/esm-compress/: Cargo.toml
crates/esm-compress/src/: int.rs  lib.rs  timeseries.rs  zstd_codec.rs
crates/esm-compress/tests/: codec_properties.rs  decode_split.rs
crates/esm-discovery/: Cargo.toml
crates/esm-discovery/src/: lib.rs
crates/esm-insert/: Cargo.toml
crates/esm-insert/src/: common.rs  convert_ctx.rs  csvimport.rs  datadog.rs  graphite.rs  influx.rs  ingestserver.rs  lib.rs  limiter.rs  opentelemetry.rs  opentsdb.rs  opentsdbhttp.rs  prometheusimport.rs  promremotewrite.rs  vmimport.rs
crates/esm-insert/tests/: csvimport_write.rs  datadog_write.rs  influx_write.rs  opentelemetry_write.rs  opentsdbhttp_write.rs  prometheusimport_write.rs  promremotewrite_write.rs  vmimport_write.rs
crates/esm-mergeset/: Cargo.toml
crates/esm-mergeset/src/: block_header.rs  block_stream_reader.rs  block_stream_writer.rs  blockcache.rs  inmemory_block.rs  inmemory_part.rs  lib.rs  merge.rs  metaindex_row.rs  part.rs  part_header.rs  part_search.rs  part_wrapper.rs  raw_items.rs  table.rs  table_merge.rs  table_parts.rs  table_search.rs  util.rs
crates/esm-mergeset/tests/: blockcache_test.rs  table_search_test.rs  table_stress_test.rs  table_test.rs
crates/esm-mergeset/tests/common/: mod.rs
crates/esm-net/: Cargo.toml
crates/esm-net/src/: lib.rs
crates/esm-objstore/: Cargo.toml
crates/esm-objstore/src/: lib.rs
crates/esm-platform/: Cargo.toml
crates/esm-platform/src/: atomic_rename.rs  durability.rs  file_lock.rs  lib.rs  mmap.rs  paths.rs  proc.rs  signal.rs
crates/esm-promql/: Cargo.toml
crates/esm-promql/benches/: promql_eval.rs
crates/esm-promql/src/: aggr.rs  aggr_incremental.rs  ast.rs  binary_op.rs  eval.rs  eval_rollup.rs  evaluator.rs  exec.rs  lexer.rs  lib.rs  memory_limiter.rs  parse_cache.rs  parser.rs  provider.rs  rollup.rs  rollup_funcs.rs  rollup_result_cache.rs  timeseries.rs  transform.rs  worker_pool.rs
crates/esm-promql/tests/: exec_test.rs  fuzz_parser.rs  promql_corpus.rs  provider_test.rs
crates/esm-protocols/: Cargo.toml
crates/esm-protocols/examples/: vm_writeback.rs
crates/esm-protocols/src/: csv_import.rs  datadog.rs  graphite.rs  influx_line.rs  json_line.rs  lib.rs  native_vm.rs  newrelic.rs  opentsdb.rs  otlp.rs  prom_remote_write.rs  text_exposition.rs
crates/esm-protocols/tests/: fuzz_parsers.rs  native_vm_roundtrip.rs  vm_differential_codec.rs  vm_fixtures.rs  vm_writeback.rs
crates/esm-protoparser/: Cargo.toml
crates/esm-protoparser/src/: csvimport.rs  datadog.rs  fastfloat.rs  graphite.rs  graphite_stream.rs  influx.rs  lib.rs  opentsdb.rs  opentsdb_stream.rs  opentsdbhttp.rs  prometheus.rs  prometheus_stream.rs  prompb.rs  prompb_encode.rs  promremotewrite.rs  stream.rs  util.rs  vmimport.rs  wire.rs
crates/esm-protoparser/tests/: csvimport_parser.rs  graphite_parser.rs  opentsdb_parser.rs  otel_pb.rs  prometheus_parser.rs
crates/esm-relabel/: Cargo.toml  README.md
crates/esm-relabel/src/: apply.rs  config.rs  graphite.rs  if_expr.rs  label.rs  lib.rs  regex.rs
crates/esm-scrape/: Cargo.toml
crates/esm-scrape/src/: lib.rs  relabel.rs
crates/esm-select/: Cargo.toml
crates/esm-select/src/: float_golden.rs  handlers.rs  json.rs  lib.rs  limiter.rs  params.rs  searchutil.rs
crates/esm-select/tests/: http_test.rs
crates/esm-storage/: Cargo.toml
crates/esm-storage/benches/: ingest_query.rs
crates/esm-storage/src/: block.rs  block_header.rs  dedup.rs  lib.rs  metaindex_row.rs  metric_name.rs  parallel_search.rs  raw_row.rs  search.rs  sharded.rs  snapshot.rs  storage.rs  sync_util.rs  table.rs  table_search.rs  time_range.rs  tsid.rs  util.rs
crates/esm-storage/tests/: index_db_test.rs  index_row_merge_test.rs  index_tag_filters_test.rs  ingest_hash_split.rs  parallel_search_cap_test.rs  parallel_search_test.rs  part_merge_test.rs  read_path_split.rs  scan_compare.rs  selective_scan_compare.rs  snapshot_test.rs  storage_test.rs
crates/esm-streamaggr/: Cargo.toml  README.md
crates/esm-streamaggr/src/: aggregator.rs  config.rs  dedup.rs  deduplicator.rs  godur.rs  histogram.rs  key.rs  lib.rs  metrics.rs  outputs.rs  tests.rs
crates/esm-vmui/: Cargo.toml
crates/esm-vmui/assets/: index.html
crates/esm-vmui/src/: lib.rs
crates/esmagent/: Cargo.toml  README.md
crates/esmagent/src/: client.rs  fanout.rs  flags.rs  flags_parse.rs  flags_tests.rs  flags_usage.rs  lib.rs  lib_tests.rs  main.rs  pendingseries.rs  queue.rs  rwctx.rs  series.rs  signal.rs  sink.rs  streamagg.rs
crates/esmagent/tests/: e2e.rs  kubernetes_sd_e2e.rs  scrape_e2e.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+946 files in other folders)
