[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Workspace tooling for EsMetrics (fmt, lint, test, bench, perf, fixtures). Run via `cargo xtask <subcommand>`."

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
