[package]
name = "esm-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Auth-aware reverse proxy (drop-in for vmauth v1.144.0)."

[lints]
workspace = true

[[bin]]
name = "esm-auth"
path = "src/main.rs"

[dependencies]
esm-common = { workspace = true }
esm-net = { workspace = true }
esm-platform = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
