[package]
name = "conformance-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Conformance harness: drives upstream VictoriaMetrics + EsMetrics side-by-side and diffs the outputs."

[lints]
workspace = true

[[bin]]
name = "conformance-harness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
