[package]
name = "esm-alerting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Alerting + recording rule evaluation and the Alertmanager v2 client for esm-alert."

[lints]
workspace = true

[dependencies]
esm-common = { workspace = true }
esm-promql = { workspace = true }

[dev-dependencies]
