[package]
name = "esm-backup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
esm-common = { path = "../esm-common" }
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger.workspace = true
object_store.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
reqwest.workspace = true

[[bin]]
name = "esbackup"
path = "src/bin/esbackup.rs"

[[bin]]
name = "esrestore"
path = "src/bin/esrestore.rs"
