[package]
name = "esm-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared utilities for EsMetrics: config, logging, errors, self-metrics."

[lints]
workspace = true

[dependencies]
esm-platform = { workspace = true }

[dev-dependencies]
