[package]
name = "esm-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
parking_lot.workspace = true
regex.workspace = true
memmap2.workspace = true
rand.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
