[package]
name = "esm-promql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "PromQL parser, planner, and executor. MetricsQL extensions land post-v1.0."

[lints]
workspace = true

[dependencies]
esm-common = { workspace = true }
esm-storage = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "promql_eval"
harness = false
