[package]
name = "esm-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ingest protocol parsers: Prom remote-write, Influx, Graphite, OpenTSDB, OTLP, DataDog, native VM."

[lints]
workspace = true

[dependencies]
esm-common = { workspace = true }
esm-compress = { workspace = true }
esm-storage = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
snap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
