[package]
name = "esm-relabel"
description = "Prometheus relabel engine (Rust port of github.com/VictoriaMetrics/lib/promrelabel)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh64"] }
esm-metricsql.workspace = true
esm-common.workspace = true
