[package]
name = "esm-scrape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Target scraping, Prometheus-compatible relabeling, and the persistent on-disk queue for esm-agent."

[lints]
workspace = true

[dependencies]
esm-common = { workspace = true }
esm-platform = { workspace = true }
esm-protocols = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
