[package]
name = "esm-select"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
esm-http = { path = "../esm-http" }
esm-metricsql = { workspace = true }
esm-promql = { workspace = true }
esm-storage = { workspace = true }
log = { workspace = true }
