[package]
name = "esm-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage engine: mergeset, indexdb, parts, background merger, retention enforcement."

[lints]
workspace = true

[dependencies]
esm-common = { workspace = true }
esm-compress = { workspace = true }
esm-platform = { workspace = true }
hashbrown = "0.15"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "ingest_query"
harness = false
