[package]
name = "esm-streamaggr"
description = "Streaming aggregation engine (Rust port of github.com/VictoriaMetrics/lib/streamaggr)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
log.workspace = true
xxhash-rust = { version = "0.8", features = ["xxh64"] }
esm-relabel.workspace = true
esm-common.workspace = true

[dev-dependencies]
