[package]
name = "esmagent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "esmagent"
path = "src/main.rs"

[dependencies]
esm-common.workspace = true
esm-insert.workspace = true
esm-metricsql.workspace = true
esm-storage.workspace = true
esm-relabel.workspace = true
esm-protoparser.workspace = true
esm-streamaggr.workspace = true
esm-http = { path = "../esm-http" }
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
base64 = "0.22"
glob = "0.3"
url = "2"
hmac = "0.12"
sha1 = "0.10"
sha2.workspace = true
quick-xml = { version = "0.40", features = ["serialize"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[target.'cfg(windows)'.dependencies.mimalloc]
version = "0.1"
default-features = false

[dev-dependencies]
snap.workspace = true
tempfile.workspace = true
